policy-ui-reporter-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-reporter
spec: {}
status: {}
