policy-ui-reporter-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-reporter-ui
spec:
  rules:
  - host: www.policy-reporter.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: policy-reporter-ui
            port:
              number: 8080
